# starterpack-retail-banking-en

./: .env  .gitignore  Dockerfile  Makefile  README.md  config.yml  credentials.yml  endpoints.yml  logging-config.yml  pyproject.toml  railway.json  requirements.txt
.config/rasa/: global.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: build-docker-image.yml
actions/: action_add_payee.py  action_ask_account.py  action_ask_account_from.py  action_ask_card.py  action_check_balance.py  action_check_card_existence.py  action_check_payee_existence.py  action_check_sufficient_funds.py  action_list_payees.py  action_process_immediate_payment.py  action_remove_payee.py  action_schedule_payment.py  action_session_start.py  action_update_card_status.py  action_validate_payment_date.py  database.py
chatwidget/: index.html
configs/: llm_openai.yml  nlu_logreg_llm_openai.yml
data/: banking.db  nlu.yml
data/accounts/: check_balance.yml
data/cards/: select_card.yml
data/flows/: add_payee.yml  block_card.yml  check_balance.yml  default_flows.yml  list_payees.yml  remove_payee.yml  transfer_money.yml  welcome.yml
data/general/: feedback.yml  goodbye.yml  human_handoff.yml
data/source/: appointments.json  branches.json  (+2 more)
domain/: check_balance.yml  default_actions.yml  default_flows.yml  domain.md  human_handoff.yml  select_card.yml  transfer_money.yml
kubernetes/: rasa-pro.yaml  values.yaml
notebooks/: database.ipynb
prompts/: rephraser_demo_personality_prompt.jinja2
tests/: e2e_results_failed.yml  e2e_results_passed.yml
(+109 files in other folders)
