[tool.poetry]
name = "moad"
version = "0.1.0"
description = "The... mother of all demos!"
authors = ["Leo Hansel <l.hansel@rasa.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "rasa-pro"
url = "https://europe-west3-python.pkg.dev/rasa-releases/rasa-pro-python/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rasa-pro = [
     {version = "3.8.1", allow-prereleases = true}
]

[[tool.poetry.dependencies.numpy]]
version = ">=1.23.5,<1.25.0"
markers = "sys_platform != 'win32' or platform_python_implementation == 'PyPy'"
python = ">=3.8,<3.10"

[[tool.poetry.dependencies.numpy]]
version = "1.22.3"
markers = "sys_platform =='win32' and platform_python_implementation != 'PyPy'"
python = "3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
